@@ -3,7 +3,11 @@ Released on 2020-10-05?
 ======================================
 
 
-bop-26353: Stop adding newline when saving an IDLE shell window.
+bpo-4360: Add an option to toggle IDLE's cursor blink for shell,
+editor, and output windows.  See Settings, General, Window Preferences,
+Cursor Blink.  Patch by Zachary Spytz.
+
+bpo-26353: Stop adding newline when saving an IDLE shell window.
 
 bpo-38598: Do not try to compile IDLE shell or output windows.
 
